--- a/roles/bootstrap/defaults/_version.yaml
+++ b/roles/bootstrap/defaults/_version.yaml
@@ -9,12 +9,12 @@ helm_chart_repository:
   nvidia-k8s-device-plugin: https://nvidia.github.io/k8s-device-plugin
   oauth2-proxy: https://oauth2-proxy.github.io/manifests
 helm_chart_version:
-  argo/argo-cd: 7.3.9
+  argo/argo-cd: 7.3.11
   bitnami-labs/sealed-secrets: 2.16.1
   dex/dex: 0.18.0
   emberstack/reflector: 7.1.288
   external-dns/external-dns: 1.14.5
   jetstack/cert-manager: v1.15.1
   longhorn/longhorn: 1.6.2
-  nvidia-k8s-device-plugin/nvidia-device-plugin: 0.16.0-rc.1
+  nvidia-k8s-device-plugin/nvidia-device-plugin: 0.16.1
   oauth2-proxy/oauth2-proxy: 7.7.9
