--- a/roles/bootstrap/defaults/main/values_other.yml
+++ b/roles/bootstrap/defaults/main/values_other.yml
@@ -1,6 +1,4 @@
 ---
-helm_force_update: false
-
 kubernetes_reflector_helm_values: {}
 
 kubernetes_reloader_helm_values: {}
@@ -13,8 +11,8 @@ argocd_helm_secrets:
     security_github_client_id: "{{ security_github_client_id }}"
     security_github_client_secret: "{{ security_github_client_secret }}"
     security_github_organizations: "{{ security_github_organizations }}"
-# custom values from https://github.com/argoproj/argo-helm/blob/main/charts/argo-cd/values.yaml
 argocd_helm_values:
+  # custom values from https://github.com/argoproj/argo-helm/blob/main/charts/argo-cd/values.yaml
   global:
     domain: "automation-argo-cd.{{ ingress_hostname }}"
     logging:
@@ -161,9 +159,11 @@ argocd_helm_values:
       enabled: "{{ enable_service_monitors }}"
       serviceMonitor:
         enabled: "{{ enable_service_monitors }}"
-    ingress:
+    httproute:
       enabled: true
-      ingressClassName: "nginx"
+      parentRefs:
+        - name: traefik-gateway
+          namespace: kube-system
       hostname: "automation-argo-cd.{{ ingress_hostname }}"
       path: /
       tls: false
