--- a/roles/bootstrap/defaults/main/_version.yaml
+++ b/roles/bootstrap/defaults/main/_version.yaml
@@ -15,10 +15,10 @@ helm_chart_version:
     ref: external-dns/external-dns
     repository: https://kubernetes-sigs.github.io/external-dns
     version: 1.19.0
-  ingress-nginx:
-    ref: ingress-nginx/ingress-nginx
-    repository: https://kubernetes.github.io/ingress-nginx
-    version: 4.14.1
+  traefik:
+    ref: traefik/traefik
+    repository: https://traefik.github.io/charts
+    version: 38.0.1
   cert-manager:
     ref: jetstack/cert-manager
     repository: https://charts.jetstack.io
