chore(docs): update README to use 'uv' for Ansible commands

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,4 +10,4 @@ become = True
 host_key_checking = False
 deprecation_warnings = False
 callback_whitelist = profile_tasks
-stdout_callback = yaml
+result_format = yaml
