--- a/roles/bootstrap/defaults/main/values_other.yml
+++ b/roles/bootstrap/defaults/main/values_other.yml
@@ -11,6 +11,7 @@ argocd_helm_secrets:
     security_github_client_id: "{{ security_github_client_id }}"
     security_github_client_secret: "{{ security_github_client_secret }}"
     security_github_organizations: "{{ security_github_organizations }}"
+  extra-secrets.yaml: "{{ argocd_extra_secrets | default('') }}"
 argocd_helm_values:
   # custom values from https://github.com/argoproj/argo-helm/blob/main/charts/argo-cd/values.yaml
   global:
