--- a/roles/prereq/tasks/main.yml
+++ b/roles/prereq/tasks/main.yml
@@ -28,6 +28,17 @@
         state: present
         reload: true
 
+- name: Increase inotify limits
+  ansible.posix.sysctl:
+    name: "{{ item.name }}"
+    value: "{{ item.value }}"
+    state: present
+    reload: true
+  loop:
+    - {name: "fs.inotify.max_user_watches", value: "2099999999"}
+    - {name: "fs.inotify.max_user_instances", value: "2099999999"}
+    - {name: "fs.inotify.max_queued_events", value: "2099999999"}
+
 - name: Populate service facts
   ansible.builtin.service_facts:
 
