--- a/roles/prereq/tasks/main.yml
+++ b/roles/prereq/tasks/main.yml
@@ -28,16 +28,17 @@
         state: present
         reload: true
 
-- name: Increase inotify limits
+- name: Increase inotify limits for fsnotify watchers
   ansible.posix.sysctl:
     name: "{{ item.name }}"
     value: "{{ item.value }}"
     state: present
-    reload: true
+    reload: yes
+    sysctl_file: /etc/sysctl.d/99-inotify-limits.conf
+  become: true
   loop:
-    - {name: "fs.inotify.max_user_watches", value: "2099999999"}
-    - {name: "fs.inotify.max_user_instances", value: "2099999999"}
-    - {name: "fs.inotify.max_queued_events", value: "2099999999"}
+    - {name: "fs.inotify.max_user_instances", value: "1024"}
+    - {name: "fs.inotify.max_user_watches", value: "524288"}
 
 - name: Populate service facts
   ansible.builtin.service_facts:
